Fixed Bug Where Dialogue Was Behind Other Elements

--- a/main.css
+++ b/main.css
@@ -443,7 +443,7 @@ input {
     height: 150px;
     width: 80px;
     position: absolute;
-    z-index: 5000;
+    z-index: 60000;
 }
 .dialogueElement {
     width: 100%;
